--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script>
-        const API_URL = 'http://{{ DOMAIN_OR_IP }}'; // replace with your API endpoint
+        const API_URL = 'http://${DOMAIN_OR_IP}'; // replace with your API endpoint
 
         var taskIdToEdit;
 
